# github-action-workflows

./: .gitignore  .pre-commit-config.yaml  .tool-versions  .yamllint.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  license.html  mkdocs.yaml  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: ci.yaml  demo.yaml  docs.yaml  publish-docs.yaml  publish-release.yaml  release-publish.yaml
docs/: index.md
docs_sphinx/: conf.py  github_action_workflows.rst  modules.rst
guides/: git-guide.html
reference/: .buildinfo  genindex.html  github_action_workflows.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
reference/.doctrees/: environment.pickle  github_action_workflows.doctree  index.doctree  modules.doctree
reference/_modules/: github_action_workflows.html  index.html
reference/_static/: documentation_options.js
scripts/: check_version.py
search/: search_index.js  search_index.json
src/github_action_workflows/: __init__.py
